2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-lex.l: Remove V as STATUS_REG.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y: Remove trailing whitespace.
	(ccstat): Indent.
	* config/tc-bfin.c (struct bfin_reg_entry): Remove.
	(bfin_reg_info[]): Remove.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-defs.h (F_REG_ALL): Remove macro.
	(F_REG_HIGH): Redefine.
	(F_REG_NONE): New macro.
	(F_REG_LOW): New macro.
	(REG_CLASS): Enclose macro argument in parentheses when used.
	(REG_EVEN): Likewise.
	(IS_H): Use flags.
	(IS_HCOMPL): Use flags.
	* config/bfin-lex.l (SP.L, SP.H, FP.L, FP.H): Set flags.
	(parse_reg): Set flags.
	(parse_halfreg): Set flags.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (gen_multi_instr_1): Check anomaly
	05000074 only when both slot1 and slot2 are filled.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/tc-bfin.c (md_assemble): Bump line counters if there is
	EOL in the instruction.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-defs.h (IS_GENREG): Define.
	(IS_DAGREG): Define.
	(IS_SYSREG): Define.
	* config/bfin-parse.y (asm_1): Check illegal register move
	instructions.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (asm_1): Fix a typo.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (asm_1): Add LOOP_BEGIN and LOOP_END.
	* config/tc-bfin.c (bfin_start_line_hook): Remove.
	(bfin_loop_beginend): New.
	* config/tc-bfin.h (bfin_start_line_hook): Don't declare.
	(md_start_line_hook): Don't define.
	* config/bfin-aux.h (bfin_loop_beginend): Declare.

2009-09-03  Tristan Gingold  <gingold@adacore.com>

	* config/tc-ia64.c (ia64_vms_note): Use lbasename instead of basename.
	Call xstrdup on the result and free the buffer after use.

2009-09-03  Tristan Gingold  <gingold@adacore.com>

	* as.h (__PRETTY_FUNCTION__): Use the same definition as bfd/libbfd.h.
